ingress/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-svc
spec: 
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TPC
      name: https
  selector:
    name: nginx-ingress-svc
