ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-war
spec:
  backend:
    serviceName: wear-service
    servicePort: 80
